--- a/news.html
+++ b/news.html
@@ -198,13 +198,13 @@
                 </div>
 
             </div>
-             <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 40px;">
+             <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 25px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
                     <button class="px-3 py-1 ">Sumsung</button>
-                    <button class="px-3 py-1 ">Xiome</button>
+                    <button class="px-3 py-1 ">Xiaomi</button>
                     <button class="px-3 py-1 ">Asus</button>
                     <button class="px-3 py-1 ">Infinix</button>
                     <button class="px-3 py-1 ">Apple</button>
