--- a/videos.html
+++ b/videos.html
@@ -177,13 +177,13 @@
             <div class="col-8 comfort-life-zone">
                 <img src="imges/Screenshot (162).png" alt="">
             </div>
-            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 40px;">
+            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 25px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
-                    <button class="px-3 py-1 ">Sumsung</button>
-                    <button class="px-3 py-1 ">Xiome</button>
+                    <button class="px-3 py-1 ">Samsung</button>
+                    <button class="px-3 py-1 ">Xiaomi</button>
                     <button class="px-3 py-1 ">Asus</button>
                     <button class="px-3 py-1 ">Infinix</button>
                     <button class="px-3 py-1 ">Apple</button>
