--- a/videos.html
+++ b/videos.html
@@ -210,7 +210,7 @@
                     <button class="px-3 py-1 ">Nothing</button>
                     <button class="px-3 py-1 ">Oscal</button>
                     <button class="px-3 py-1 ">oukitel</button>
-                    <button class="px-3 py-1 ">Motrola</button>
+                    <button class="px-3 py-1 ">Motorola</button>
                     <button class="px-3 py-1 ">Vivo</button>
                     <button class="px-3 py-1 ">Shrap</button>
                     <button class="px-3 py-1 ">Itel</button>
