--- a/featured.html
+++ b/featured.html
@@ -437,15 +437,15 @@
                     <h1 class="common">Google pIxel 9a Review</h1>
                 </div>
                 <div class="d-flex">
-                    <h4 class="text-secondary mt-2 d-inline">top 10 by Daily Interest </h4>
+                    <h5 class="text-secondary mt-2 d-inline fw-bold " style="text-transform: uppercase;" >top 10 by Daily Interest </h5>
                 </div>
                 <div class="center w-100">
                     <table class="table table-sm custom-table">
                         <thead>
-                            <tr class="text-white " style="background-color: #A4C08D;">
-                                <th>#</th>
-                                <th>Devices</th>
-                                <th>Daily Hits</th>
+                            <tr class="text-white " style="background-color: #4C7273;">
+                                <th  style="color: white;">#</th>
+                                <th style="color: white;">Devices</th>
+                                <th style="color: white;">Daily Hits</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -503,6 +503,8 @@
                     </table>
                 </div>
                 <div class="center w-100 " style="margin-top: 12px;">
+                    <h5 class="text-secondary mt-2 d-inline fw-bold " style="text-transform: uppercase;" >top 10 by Fans </h5>
+                    
                     <table class="table table-sm custom-table">
                         <thead>
                         <tr class="text-white" style="background-color: #14222D;">
@@ -565,7 +567,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h5 style="border-left: solid 5px grey ;" class="px-3 text-secondary py-3">Electric Vehicles</h5>
+                <h5 style="border-left: solid 5px grey ; text-transform: uppercase;" class=" fw-bold px-3 text-secondary py-1">Electric Vehicles</h5>
                 <div style="background-color: #f2f2f2; height: 260px">
                     <div class="col-md-12">
                         <img src="https://st.arenaev.com/news/25/05/xiaomi-su7-faces-quality-concerns/-344x215/arenaev_001.jpg"
