--- a/rewies.html
+++ b/rewies.html
@@ -609,7 +609,7 @@
                         </div>
                     </div>
                 </div>
-                <h6 style="border-left: solid 5px grey ;text-transform: uppercase;" class="px-3 text-secondary mt-3" >Popular comparisons</h6>
+                <h6 style="border-left: solid 5px grey ;text-transform: uppercase;" class=" fw-bold px-3 text-secondary mt-3" >Popular comparisons</h6>
                  <div class="sentizer bg-white mt-2 p-3 rounded shadow-sm" style="    text-transform: Uppercase;
                                             font-size: 13px;
                                             font-weight: 700;">
