--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Font Awesome (for icons) -->
     <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <script>
+    <script>    
 
     </script>
 
@@ -158,6 +158,9 @@
     <div id="leftMenu" class="container show">
         <div class="row">
             <div class="col-12 d-flex align-items-center   colums-gap">
+                <a href="single-post-page.html" class="nav-link">Post Page</a>
+                <a href="single-divice-page.html" class="nav-link">Post Device</a>
+
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="compare.html" class="nav-link">Compare</a>
                 <a href="videos.html" class="nav-link">Videos</a>
