--- a/news.html
+++ b/news.html
@@ -645,7 +645,7 @@
 
                 <div class="d-flex my-3" style="background-color: #f2f2f2;">
                     <div class="col-md-12 py-2">
-                        <p class="fw-bold mb-1 wanted-12">
+                        <p class="fw-bold mb-1 wanted-12 text text-center">
                             Xiomo Sign Partnership agreement with nurbugging
                         </p>
                     </div>
