--- a/single-divice-page.html
+++ b/single-divice-page.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color: #EFEBE9;">
+<body style="background-color: #EFEBE9; overflow-x: hidden;">
   <!-- Desktop Navbar of Gsmarecn -->
   <div class="main-wrapper">
     <!-- Top Navbar -->
