--- a/single-post-page.html
+++ b/single-post-page.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color: #EFEBE9;">
+<body style="background-color: #EFEBE9; overflow-x: hidden;">
     <!-- Desktop Navbar of Gsmarecn -->
     <div class="main-wrapper">
         <!-- Top Navbar -->
@@ -513,7 +513,7 @@
                         </tbody>
                     </table>
                 </div>
-                
+
                 <h6 style="border-left: solid 5px grey ; text-transform: uppercase;"
                     class=" fw-bold px-3 text-secondary py-1">Electric Vehicles</h6>
                 <div style="background-color: #f2f2f2; height: 260px">
