--- a/single-divice-page.html
+++ b/single-divice-page.html
@@ -781,7 +781,7 @@
     padding: 6px 19px;"> <strong>Disclaimer</strong>. We can not guarantee that the information on this page is 100%
             correct. Read more</p>
 
-          <div class="d-flex">
+          <div class="d-block d-lg-flex">
             <button class="pad">REVIEW</button> <button class="pad">OPINION</button> <button
               class="pad">COMPARE</button> <button class="pad">PICTURES</button> <button class="pad">PRICES</button>
           </div>
