--- a/single-post-page.html
+++ b/single-post-page.html
@@ -299,7 +299,7 @@
                     <p class="classy gap-portion">It hasn't succeeded thus far, but according to a new report, Apple
                         might incorporate Tandem OLED panels in the 2028 iPhones (so presumably the iPhone 20 family -
                         or will that be XX?</p>
-                    <img class="center-img" src="/imges/gsmarena_001 (1)--12.jpg" alt="">
+                    <img class="center-img" src="imges/gsmarena_001 (1)--12.jpg" alt="">
 
                     <p class="classy gap-portion">No decision has been made by Apple so far, but of course LG would like
                         the Cupertino company to choose this tech, since that would mean it would either be the sole
@@ -324,25 +324,25 @@
                     <h4 class="related-articles-heading">Related Articles</h4>
                     <div class="blog-post">
                         <div class="box-es">
-                            <img src="/imges/fms-.jpg" alt="">
+                            <img src="imges/fms-.jpg" alt="">
                             <h6>
                                 Gurman: Apple working on three major iPhone redesigns
                             </h6>
                         </div>
                         <div class="box-es">
-                            <img src="/imges/gsmarena_00012.jpg" alt="">
+                            <img src="imges/gsmarena_00012.jpg" alt="">
                             <h6>
                                 Apple wants to bring Touch ID to its watches starting next year
                             </h6>
                         </div>
                         <div class="box-es">
-                            <img src="/imges/gsmarena_000-5666.jpg" alt="">
+                            <img src="imges/gsmarena_000-5666.jpg" alt="">
                             <h6>
                                 No one is using the iPhone Camera Control and Apple will drop it, sketchy rumor claims
                             </h6>
                         </div>
                         <div class="box-es">
-                            <img src="/imges/gsmarena_000-80-088.jpg" alt="">
+                            <img src="imges/gsmarena_000-80-088.jpg" alt="">
                             <h6> Apple's entire iPhone 17 family to be made in India for the US market from the
                                 beginning
 
