--- a/single-divice-page.html
+++ b/single-divice-page.html
@@ -418,30 +418,32 @@
           </div>
 
           <!-- Specs Row (aligned with image) -->
-          <div class="row text-center g-0 d-lg-flex d-block  pt-2 specs-bar">
-            <div class="col-3 spec-item">
-              <img src="imges/download-removebg-preview (1).png" alt="">
-              <div class="spec-title"> 6.77"</div>
-              <div class="spec-subtitle">1080x2392 px</div>
-            </div>
-            <div class="col-3 spec-item border-start">
-              <img src="/imges/rolling-removebg-preview.png" alt="">
-              <div class="spec-title">50MP</div>
-              <div class="spec-subtitle">2160p</div>
-            </div>
-            <div class="col-3 spec-item border-start">
-              <img src="/imges/rolling.jfif" alt="">
+           <div class="row text-center g-0  pt-2 specs-bar">
+                <div class="col-3 spec-item">
+                  <img src="imges/vrer.png" style="width: 25px;" alt="">
 
-              <div class="spec-title">8-16GB</div>
-              <div class="spec-subtitle">Snapdragon 7 Gen 4</div>
-            </div>
-            <div class="col-3 spec-item border-start">
-              <img src="/imges/rolling.jfif" alt="">
+                  <div class="spec-title"> 6.77"</div>
+                  <div class="spec-subtitle">1080x2392 px</div>
+                </div>
+                <div class="col-3 spec-item border-start">
+                  <img src="imges/bett-removebg-preview.png" style="width: 35px;" alt="">
 
-              <div class="spec-title">6500mAh</div>
-              <div class="spec-subtitle">90W</div>
-            </div>
-          </div>
+                  <div class="spec-title">50MP</div>
+                  <div class="spec-subtitle">2160p</div>
+                </div>
+                <div class="col-3 spec-item border-start">
+                  <img src="imges/encypt-removebg-preview.png" style="width: 38px;" alt="">
+
+                  <div class="spec-title">8-16GB</div>
+                  <div class="spec-subtitle">Snapdragon 7</div>
+                </div>
+                <div class="col-3 spec-item border-start">
+                  <img src="imges/lowtry-removebg-preview.png" style="width: 35px;" alt="">
+
+                  <div class="spec-title">6500mAh</div>
+                  <div class="spec-subtitle">90W</div>
+                </div>
+              </div>
 
         </div>
       </div>
