--- a/single-divice-page.html
+++ b/single-divice-page.html
@@ -418,7 +418,7 @@
           </div>
 
           <!-- Specs Row (aligned with image) -->
-           <div class="row text-center g-0  pt-2 specs-bar">
+           <div class="row text-center d-block g-0  pt-2 specs-bar">
                 <div class="col-3 spec-item">
                   <img src="imges/vrer.png" style="width: 25px;" alt="">
 
