--- a/single-divice-page.html
+++ b/single-divice-page.html
@@ -691,7 +691,7 @@
         <div class="bg-white">
 
 
-          <table class="table forat">
+          <table class="table fora  t">
             <tbody>
               <tr>
                 <th class="spec-label">NETWORK</th>
@@ -699,6 +699,7 @@
               </tr>
               <tr>
                 <th class="spec-label">LAUNCH</th>
+                <br>
                 <td>
                   <strong>Announced</strong> 2025, August 12<br>
                   <strong>Status</strong> Available. Released 2025, August 19
@@ -933,7 +934,7 @@
             </div>
           </div>
 
-          <img src="https://fdn.gsmarena.com/imgroot/static/banners/self/review-pixel-9-pro-xl-728x90.jpg" alt="">
+          <img  src="https://fdn.gsmarena.com/imgroot/static/banners/self/review-pixel-9-pro-xl-728x90.jpg" alt="" style="width: -webkit-fill-available;">
         </div>
       </div>
 
