--- a/single-divice-page.html
+++ b/single-divice-page.html
@@ -223,7 +223,7 @@
     }
 
     .spec-item {
-      padding: 20px;
+      padding: 12px 20px;
       display: flex;
       row-gap: 8px;
       flex-direction: column;
@@ -318,15 +318,21 @@
       background: linear-gradient(90deg, #fff 0%, #fcfeff 2%, rgba(125, 185, 232, 0));
       z-index: 1;
     }
-
+    
     .phone-image {
-      display: block;
-      height: -webkit-fill-available;
-      width: 165px;
-      position: relative;
-      z-index: 2;
-      background: #fff;
-    }
+     margin-left: 5px;
+    display: block;
+    height: -webkit-fill-available;
+    width: 165px;
+    position: relative;
+    z-index: 2;
+    background: url("https://fdn2.gsmarena.com/vv/bigpic/samsung-galaxy-s24-ultra-5g-sm-s928-stylus.jpg");
+    /* background: #fff; */
+    background-position: right;
+    background-color: #fff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
     tr {
       background-color: white;
@@ -386,11 +392,15 @@
       <div class="d-lg-flex  d-block" style="align-items: flex-start; ">
 
         <!-- Left: Phone Image -->
-        <div class="phone-image me-3 pt-2 px-2">
-          <img style="    height: -webkit-fill-available;
-    width: 100%;
-    padding: 12px;" src="https://fdn2.gsmarena.com/vv/bigpic/vivo-v60.jpg" alt="vivo V60 phone image" />
-        </div>
+         <div style=" 
+         height: 200px;
+    height: -webkit-fill-available;
+    background: white;
+   padding-top: 5px;    
+">
+            <!-- Left: Phone Image -->
+            <div class="phone-image me-3 pt-2 px-2" style="height: 200px;"></div>
+</div>
 
         <!-- Right: Details + Stats + Specs -->
         <div class="flex-grow-1 position-relative" style="z-index: 100;">
@@ -479,11 +489,11 @@
 
     </div>
   </div>
-  <div class="container d-lg-block d-none">
+  <div class="container d-md-block d-none">
     <div class="row">
       <div class="article-info">
         <div class="bg-blur">
-          <div class="d-block justify-content-end">
+          <div class="d-block d-md-none justify-content-end">
             <div class="d-flex flexiable ">
               <img src="/imges/download-removebg-preview.png" alt="">
               <h5 style="font-family:'oswald' ; font-size: 16px" class="mt-2">Review (17)
@@ -535,18 +545,19 @@
           <div class="d-flex" style="align-items: flex-start;">
 
             <!-- Left: Phone Image -->
-            <div class="phone-image me-3 pt-2 px-2">
-              <img style="    height: -webkit-fill-available;
-    width: 100%;
-    padding: 12px;" src="https://fdn2.gsmarena.com/vv/bigpic/vivo-v60.jpg" alt="vivo V60 phone image" />
-            </div>
-
+             <div style="
+    height: -webkit-fill-available;
+    background: white;
+">
+            <!-- Left: Phone Image -->
+            <div class="phone-image me-3 pt-2 px-2"></div>
+</div>
+          
             <!-- Right: Details + Stats + Specs -->
             <div class="flex-grow-1 position-relative" style="z-index: 100;">
 
               <!-- Phone Details + Stats -->
-              <div class="d-flex justify-content-between mb-3">
-
+              <div class="d-flex justify-content-between">
                 <ul class="phone-details list-unstyled mb-0 d-lg-block d-none">
                   <li><span>📅 Released 2025, August 19</span></li>
                   <li><span>⚖️ 192g or 201g, 7.5mm thickness</span></li>
@@ -630,55 +641,59 @@
 
 
       </div>
-      <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 25px;">
-        <button class="solid w-100 py-2">
-          <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
-          Phone Finder</button>
-        <div class="devor">
-          <button class="px-3 py-1 ">Sumsung</button>
-          <button class="px-3 py-1 ">Xiaomi</button>
-          <button class="px-3 py-1 ">Asus</button>
-          <button class="px-3 py-1 ">Infinix</button>
-          <button class="px-3 py-1 ">Apple</button>
-          <button class="px-3 py-1 ">Google</button>
-          <button class="px-3 py-1 ">AlCatel</button>
-          <button class="px-3 py-1 ">Ulefone</button>
-          <button class="px-3 py-1 ">Huawei</button>
-          <button class="px-3 py-1 ">Honor</button>
-          <button class="px-3 py-1 ">Zte</button>
-          <button class="px-3 py-1 ">Tecno</button>
-          <button class="px-3 py-1 ">Nokia</button>
-          <button class="px-3 py-1 ">Oppo</button>
-          <button class="px-3 py-1 ">Microsoft </button>
-          <button class="px-3 py-1 ">Dooge</button>
-          <button class="px-3 py-1 ">Sony</button>
-          <button class="px-3 py-1 ">Realme</button>
-          <button class="px-3 py-1 ">Unidegi</button>
-          <button class="px-3 py-1 ">Blackview</button>
-          <button class="px-3 py-1 ">Lg </button>
-          <button class="px-3 py-1 ">OnePlus</button>
-          <button class="px-3 py-1 ">Coolpad</button>
-          <button class="px-3 py-1 ">Cubot</button>
-          <button class="px-3 py-1 ">HTc</button>
-          <button class="px-3 py-1 ">Nothing</button>
-          <button class="px-3 py-1 ">Oscal</button>
-          <button class="px-3 py-1 ">oukitel</button>
-          <button class="px-3 py-1 ">Motrola</button>
-          <button class="px-3 py-1 ">Vivo</button>
-          <button class="px-3 py-1 ">Shrap</button>
-          <button class="px-3 py-1 ">Itel</button>
-          <button class="px-3 py-1 ">Lenovo</button>
-          <button class="px-3 py-1 ">meizu</button>
-          <button class="px-3 py-1 ">Micromax</button>
-          <button class="px-3 py-1 ">Tcl</button>
-        </div>
-        <button class="solid w-50 py-2">
-          <i class="fa-solid fa-bars fa-sm mx-2"></i>
-          All Brands</button>
-        <button class="solid py-2" style="    width: 177px;">
-          <i class="fa-solid fa-volume-high fa-sm mx-2"></i>
-          RUMORS MILL</button>
-      </div>
+        <div class="col-md-4 col-5 d-none d-lg-block">
+                <button class="solid w-100 py-2">
+                    <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
+                    Phone Finder</button>
+                <div class="devor">
+                    <button>Samsung</button>
+                    <button>Xiaomi</button>
+                    <button >Asus</button>
+                    <button>Infinix</button>
+                    <button>Apple</button>
+                    <button >Google</button>
+                    <button >AlCatel</button>
+                    <button >Ulefone</button>
+                    <button >Huawei</button>
+                    <button >Honor</button>
+                    <button >Zte</button>
+                    <button >Tecno</button>
+                    <button >Nokia</button>
+                    <button >Oppo</button>
+                    <button >Microsoft </button>
+                    <button >Dooge</button>
+                    <button >Sony</button>
+                    <button >Realme</button>
+                    <button >Unidegi</button>
+                    <button >Blackview</button>
+                    <button >Lg </button>
+                    <button >OnePlus</button>
+                    <button >Coolpad</button>
+                    <button >Cubot</button>
+                    <button >HTc</button>
+                    <button >Nothing</button>
+                    <button >Oscal</button>
+                    <button >oukitel</button>
+                    <button >Motrola</button>
+                    <button >Vivo</button>
+                    <button >Shrap</button>
+                    <button >Itel</button>
+                    <button >Lenovo</button>
+                    <button >meizu</button>
+                    <button >Micromax</button>
+                    <button >Tcl</button>
+                </div>
+                <div class="d-flex">
+
+                    <button class="solid w-50 py-2">
+                        <i class="fa-solid 
+                        fa-bars fa-sm mx-2"></i> All Brands</button>
+                    <button class="solid w-50 py-2" style="/* width: 177px; */">
+                        <i class="fa-solid fa-volume-high fa-sm mx-2"></i>
+                        RUMORS MILL</button>
+
+                </div>
+            </div>
     </div>
 
   </div>
