--- a/phonefinder.html
+++ b/phonefinder.html
@@ -180,54 +180,58 @@
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
-            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 25px;">
+            <div class="col-md-4 col-5 d-none d-lg-block">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
-                    <button class="px-3 py-1 ">Sumsung</button>
-                    <button class="px-3 py-1 ">Xiaomi</button>
-                    <button class="px-3 py-1 ">Asus</button>
-                    <button class="px-3 py-1 ">Infinix</button>
-                    <button class="px-3 py-1 ">Apple</button>
-                    <button class="px-3 py-1 ">Google</button>
-                    <button class="px-3 py-1 ">AlCatel</button>
-                    <button class="px-3 py-1 ">Ulefone</button>
-                    <button class="px-3 py-1 ">Huawei</button>
-                    <button class="px-3 py-1 ">Honor</button>
-                    <button class="px-3 py-1 ">Zte</button>
-                    <button class="px-3 py-1 ">Tecno</button>
-                    <button class="px-3 py-1 ">Nokia</button>
-                    <button class="px-3 py-1 ">Oppo</button>
-                    <button class="px-3 py-1 ">Microsoft </button>
-                    <button class="px-3 py-1 ">Dooge</button>
-                    <button class="px-3 py-1 ">Sony</button>
-                    <button class="px-3 py-1 ">Realme</button>
-                    <button class="px-3 py-1 ">Unidegi</button>
-                    <button class="px-3 py-1 ">Blackview</button>
-                    <button class="px-3 py-1 ">Lg </button>
-                    <button class="px-3 py-1 ">OnePlus</button>
-                    <button class="px-3 py-1 ">Coolpad</button>
-                    <button class="px-3 py-1 ">Cubot</button>
-                    <button class="px-3 py-1 ">HTc</button>
-                    <button class="px-3 py-1 ">Nothing</button>
-                    <button class="px-3 py-1 ">Oscal</button>
-                    <button class="px-3 py-1 ">oukitel</button>
-                    <button class="px-3 py-1 ">Motrola</button>
-                    <button class="px-3 py-1 ">Vivo</button>
-                    <button class="px-3 py-1 ">Shrap</button>
-                    <button class="px-3 py-1 ">Itel</button>
-                    <button class="px-3 py-1 ">Lenovo</button>
-                    <button class="px-3 py-1 ">meizu</button>
-                    <button class="px-3 py-1 ">Micromax</button>
-                    <button class="px-3 py-1 ">Tcl</button>
+                    <button>Samsung</button>
+                    <button>Xiaomi</button>
+                    <button >Asus</button>
+                    <button>Infinix</button>
+                    <button>Apple</button>
+                    <button >Google</button>
+                    <button >AlCatel</button>
+                    <button >Ulefone</button>
+                    <button >Huawei</button>
+                    <button >Honor</button>
+                    <button >Zte</button>
+                    <button >Tecno</button>
+                    <button >Nokia</button>
+                    <button >Oppo</button>
+                    <button >Microsoft </button>
+                    <button >Dooge</button>
+                    <button >Sony</button>
+                    <button >Realme</button>
+                    <button >Unidegi</button>
+                    <button >Blackview</button>
+                    <button >Lg </button>
+                    <button >OnePlus</button>
+                    <button >Coolpad</button>
+                    <button >Cubot</button>
+                    <button >HTc</button>
+                    <button >Nothing</button>
+                    <button >Oscal</button>
+                    <button >oukitel</button>
+                    <button >Motrola</button>
+                    <button >Vivo</button>
+                    <button >Shrap</button>
+                    <button >Itel</button>
+                    <button >Lenovo</button>
+                    <button >meizu</button>
+                    <button >Micromax</button>
+                    <button >Tcl</button>
                 </div>
-                <button class="solid w-50 py-2">
-                    <i class="fa-solid fa-bars fa-sm mx-2"></i>
-                    All Brands</button>
-                <button class="solid py-2" style="    width: 177px;">
-                    <i class="fa-solid fa-volume-high fa-sm mx-2"></i>
-                    RUMORS MILL</button>
+                <div class="d-flex">
+
+                    <button class="solid w-50 py-2">
+                        <i class="fa-solid 
+                        fa-bars fa-sm mx-2"></i> All Brands</button>
+                    <button class="solid w-50 py-2" style="/* width: 177px; */">
+                        <i class="fa-solid fa-volume-high fa-sm mx-2"></i>
+                        RUMORS MILL</button>
+
+                </div>
             </div>
         </div>
 
