--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 </h6>
                 <div class="cent">
 
-                    <div class="d-flex">
+                    <div class="d-flex align-items-start">
                         <div class="canel">
                             <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/vivoiy300-gt.jpg" alt="">
                             <p>Vivo y300 Gt</p>
@@ -454,7 +454,7 @@
                             <p>Vivo x200 FE</p>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex align-items-start">
                         <div class="canel">
                             <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/vivo-x-fold3.jpg" alt="">
                             <p>Vivo X Fold5</p>
@@ -468,7 +468,7 @@
                             <p>OScal pad 100</p>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex align-items-start">
                         <div class="canel">
                             <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/itel-city-100.jpg" alt="">
                             <p>itel city 100</p>
@@ -972,7 +972,7 @@
 
                 <div class="cent">
 
-                    <div class="d-flex">
+                    <div class="d-flex ">
                         <div class="canel">
                             <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/nothing-cmf-phone-2-pro.jpg"
                                 alt="">
