--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4  col-12  bg-white ">
+            <div class="col-lg-4  col-12  bg-white " style="margin-top: 18px;"> 
                 <h4 class="section-heading ">In stores now</h4>
                 <div class="d-none d-lg-flex" style="overflow: hidden;
     overflow-y: auto;
